main change into history and prediction architecture

--- a/production_dev/static/index.html
+++ b/production_dev/static/index.html
@@ -114,40 +114,10 @@
             </div>
         </section>
 
-        <!-- Summary Cards -->
-        <section class="summary-grid" id="summary-section" style="display: none;">
-            <div class="summary-card glass green">
-                <span class="summary-icon">📈</span>
-                <div class="summary-content">
-                    <span class="summary-value" id="up-count">0</span>
-                    <span class="summary-label">UP Days</span>
-                </div>
-            </div>
-            <div class="summary-card glass red">
-                <span class="summary-icon">📉</span>
-                <div class="summary-content">
-                    <span class="summary-value" id="down-count">0</span>
-                    <span class="summary-label">DOWN Days</span>
-                </div>
-            </div>
-            <div class="summary-card glass gold">
-                <span class="summary-icon">🎯</span>
-                <div class="summary-content">
-                    <span class="summary-value" id="avg-confidence">0%</span>
-                    <span class="summary-label">Avg Confidence</span>
-                </div>
-            </div>
-            <div class="summary-card glass purple">
-                <span class="summary-icon">💰</span>
-                <div class="summary-content">
-                    <span class="summary-value" id="price-change">+0%</span>
-                    <span class="summary-label">Simulated Change</span>
-                </div>
-            </div>
-        </section>
+        <!-- Summary Cards removed - shown NaN values -->
 
         <!-- Predictions Table -->
-        <section class="predictions-table glass" id="table-section" style="display: none;">
+        <section class="predictions-table glass" id="table-section">
             <div class="table-header">
                 <h2>📋 Daily Predictions</h2>
                 <button class="btn-secondary" id="export-btn">
