--- a/production_dev/static/index.html
+++ b/production_dev/static/index.html
@@ -79,7 +79,7 @@
             <div class="control-group">
                 <label for="backtest-slider">History (Backtest)</label>
                 <div class="slider-container">
-                    <input type="range" id="backtest-slider" min="30" max="1095" value="180" step="10">
+                    <input type="range" id="backtest-slider" min="30" max="1095" value="180" step="1">
                     <span class="slider-value" id="backtest-value">180 days</span>
                 </div>
             </div>
@@ -112,6 +112,7 @@
                     <p>Calculating planetary positions...</p>
                 </div>
             </div>
+            <p class="split-caption" id="split-caption"></p>
         </section>
 
         <!-- Summary Cards removed - shown NaN values -->
@@ -151,8 +152,8 @@
         </footer>
     </div>
 
-    <!-- JavaScript -->
-    <script src="/static/app.js"></script>
+    <!-- JavaScript (ES Modules) -->
+    <script type="module" src="/static/app.js"></script>
 </body>
 
 </html>
